re PR target/23196 (ICE instantiate_virtual_regs_in_insn when -fforce-addr used)

PR 23196
        * explow.c (memory_address): Remove special-case for
        virtual_stack_vars_rtx and virtual_incoming_args_rtx.

From-SVN: r102668