gcc/testsuite/gcc.c-torture/compile/20050802-1.c
@@ -1,0 +1,10 @@
+/* PR 23196 */
+/* { dg-options "-fforce-addr" } */
+
+void foo()
+{
+  char c;
+
+  c |= 1;
+  bar(&c);
+}
